--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "convex": "^1.31.1",
     "next": "^15.2.3",
     "react": "^19.2.3",
-    "react-dom": "^19.2.3"
+    "react-dom": "^19.2.3",
+    "svix": "^1.82.0"
   },
   "devDependencies": {
     "@types/node": "^20",
