--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "dependencies": {
     "@clerk/nextjs": "^6.36.2",
     "@clerk/themes": "^2.4.44",
+    "@monaco-editor/react": "^4.7.0",
     "convex": "^1.31.1",
+    "framer-motion": "^12.23.26",
     "lucide-react": "^0.562.0",
     "next": "^15.2.3",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
-    "svix": "^1.82.0"
+    "svix": "^1.82.0",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@types/node": "^20",
