--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "^15.2.3",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
+    "react-syntax-highlighter": "^16.1.0",
     "svix": "^1.82.0",
     "zustand": "^5.0.9"
   },
@@ -25,6 +26,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
     "postcss": "^8",
