--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "^15.2.3",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
+    "react-hot-toast": "^2.6.0",
     "react-syntax-highlighter": "^16.1.0",
     "svix": "^1.82.0",
     "zustand": "^5.0.9"
